force-app/main/default/objects/Program_Period__c/Program_Period__c.object-meta.xml
<CustomObject>
    <description>Represents a funding or reporting period for a Funding Program</description>
    <label>Program Period</label>
    <nameField>
        <displayFormat>PP - {00000}</displayFormat>
        <label>Program Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>