force-app/main/default/objects/Program_Period__c/fields/Casual_Contact_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Casual_Contact_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Casual Contact Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>