force-app/main/default/objects/Program_Period__c/fields/De_identified_Sessions_Only__c.field-meta.xml
<CustomField>
    <fullName>De_identified_Sessions_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>De-identified Sessions Only</label>
    <type>Checkbox</type>
</CustomField>