force-app/main/default/objects/Program_Period__c/fields/Funding_Period__c.field-meta.xml
<CustomField>
    <fullName>Funding_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reporting Periods must be related to a Funding Period</inlineHelpText>
    <label>Funding Period</label>
    <referenceTo>Program_Period__c</referenceTo>
    <relationshipLabel>Reporting Periods</relationshipLabel>
    <relationshipName>Program_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>