force-app/main/default/objects/Program_Period__c/fields/Funding_Period_Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Period_Target_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Inherited from parent Funding Program</inlineHelpText>
    <label>Funding Period Target Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>