force-app/main/default/objects/Program_Period__c/fields/Funding_Period_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Funding_Period_Target_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Inherited from the parent Funding Program</inlineHelpText>
    <label>Funding Period Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>