force-app/main/default/objects/Program_Period__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <label>Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Program Periods</relationshipLabel>
    <relationshipName>Program_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>