force-app/main/default/objects/Program_Period__c/fields/Period_Expired__c.field-meta.xml
<CustomField>
    <fullName>Period_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Period Expired</label>
    <type>Checkbox</type>
</CustomField>