force-app/main/default/objects/Program_Period__c/fields/Period_Quantity_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Period_Quantity_Grand_Total__c</fullName>
    <formula>Period_Total_Quantity__c + Casual_Contact_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Period Total Quantity + Casual Contact Quantity</inlineHelpText>
    <label>Period Quantity Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>