force-app/main/default/objects/Program_Period__c/fields/Period_Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Period_Total_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Period Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>