force-app/main/default/objects/Program_Period__c/fields/Period_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Period_Total_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Period Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>